--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alice&display=swap"
+      rel="stylesheet"
+    />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pagina de Receitas</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="page">
-      <img src="" alt="" />
+      <img
+        src="assets/main-image.jpg"
+        alt="Imagem de um cupcake com grãos de café"
+      />
       <main>
         <section id="about">
           <h1>Cupcake de café com chantilly</h1>
@@ -56,6 +68,7 @@
             bem até engrossar. Desligue, deixe esfriar e coloque dentro de um
             saco de confeiteiro com bico perle. Reserve. Coloque o chantilly
             dentro de um saco de confeiteiro com bico pitanga e reserve. <br />
+
             Para a montagem, faça um furo no centro dos cupcakes e recheie com o
             brigadeiro de café reservado. Decore as superfícies dos cupcakes com
             o chantilly reservado, fazendo círculos. Decore com grãos de café e
