--- a/index.html
+++ b/index.html
@@ -77,5 +77,9 @@
         </section>
       </main>
     </div>
+    <footer>
+      Feito com <img src="assets/Vector.svg" alt="Coração desenhado" /> pela
+      Rocketseat
+    </footer>
   </body>
 </html>
